[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Map.gd" type="Script" id=1]
[ext_resource path="res://scenes/map/Player_Avatar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=3]

[node name="Map" type="Spatial"]
script = ExtResource( 1 )

[node name="Navigation_Nodes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )

[node name="Movables" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0 )

[node name="Between_Nodes" type="Spatial" parent="."]

[node name="Backgorund" type="Spatial" parent="."]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, -0.1, 0 )

[node name="Details" type="Spatial" parent="."]

[node name="Player_Avatar" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, -5.06639e-007, 0, 5.06639e-007, 1, 0, 0, 0 )

[node name="Camera" type="Camera" parent="Player_Avatar"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 15, 10 )
current = true
fov = 90.0
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Player_Avatar/Camera"]
